[tool.poetry]
name = "jinja-test"
version = "0.1.0"
description = ""
authors = ["Josh Newman <josh.newman4390@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
